# generative-ai-site

./: README.md  pyproject.toml
src/: app.py
src/generative_ai_site/models/: code_completion.py  stable_diffusion.py
