[tool.poetry]
name = "generative-ai-site"
version = "0.1.0"
description = ""
authors = ["Sam Lausten <srlausten@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
dash = "^2.15.0"
requests = "^2.31.0"
torch = "^2.2.1"
torchvision = "^0.17.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
